# Web-Compiler-AI-Assisted

./: code.rs  phase6.md  readme.md
engine/: Cargo.toml
engine/src/: lib.rs  main.rs
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/: CodeEditor.tsx
