[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# REMOVE: [lib] crate-type = ["cdylib"]

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }# REMOVE: wasm-bindgen and serde-wasm-bindgen